# pico-onboard

./: .gitignore  CMakeLists.txt  dhcp_server.c  dns_server.c  events.c  events.h  lwipopts.h  main.c  network.c  network.h  network_interface.h  storage.c  storage.h  timer.c  timer.h
script/: c2py.py  command_protocol.py  send.py
